# mkmover

./: .gitignore  abm_skele.py  pytest.ini  setup.cfg  test_abm_skele.py
mkmover/: __init__.py  abm.py  interval.py  markov_mover.py
tests/: test_abm.py
