[metadata]
name = mkmover
version = 0.0.0a
author = David Wu
author_email = david.wu1@monash.edu
description = basic agent-based simulation
url = https://github.com/dwu0042/mkmover
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    sortedcontainers

[options.extras_require]
test = pytest; flaky